<resources>

    <string name="app_name">BioInk</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">BioInk</string>
    
    <string name="bio_ink_logo">BioInk Logo</string>

    <string name="radio_status">radio status null</string>
    <string name="devices_paired">devices paired null</string>
    <string name="devices_audible">devices audible null</string>
    <string name="viz_button">Null strings.xml</string>
    <string name="menu_button">Advanced</string>
    
    <string name="save_button">OK</string>
    <string name="accept">Accept</string>
    <string name="advanced_settings">Advanced Settings</string>
    
	<string-array name="viz_metrics">
        <item>Respiration</item>
        <item>Heartrate</item>
    </string-array>

</resources>